adding new integration flow in code.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MLKitPOC</string>
+
+    <string name="list_title">List</string>
+    <string name="details_title">Details</string>
+
 </resources>
